@@ -111,6 +111,7 @@ Release 0.19.0 - Unreleased
    HBASE-1068  TestCompaction broken on hudson
    HBASE-1067  TestRegionRebalancing broken by running of hdfs shutdown thread
    HBASE-1070  Up default index interval in TRUNK and branch
+   HBASE-1045  Hangup by regionserver causes write to fail
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
